fixed white spaces

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: medium;
   color: #333;
+  background-color: #eeeeee;
   margin: 0;  
   padding: 0; 
 }
